# QtAndroidUtils

./: .gitignore  .travis.yml  QtAndroidUtils.pro  README.md  README_zh_CN.md
android/: AndroidManifest.xml  android.pri  build.gradle  settings.gradle
android/QtAndroidUtilsModule/: AndroidManifest.xml  QtAndroidUtilsModule.pri  QtAndroidUtilsModule.pro  build.gradle
android/QtAndroidUtilsModule/jni/: ActivityResultReceiver.cpp  ActivityResultReceiver.h  AndroidDirectory.h  AndroidUtils.cpp  AndroidUtils.h  CMakeLists.txt  NativeCallback.cpp  NativeCallback.h  Notification.cpp  Notification.h  NotificationNative.cpp  NotificationNative.h  QtAndroidUtilsModule.pc.in  Test.cpp  Test.h  jni.pri
android/QtAndroidUtilsModule/res/layout/: activity_share.xml
android/QtAndroidUtilsModule/res/xml/: provide_paths.xml
android/QtAndroidUtilsModule/src/org/KangLinStudio/: MessageNotification.java  Test.java  Utils.java
android/QtAndroidUtilsModule/src/org/KangLinStudio/QtAndroidUtils/: MessageNotification.java  ShareActivity.java  Test.java  Utils.java
android/jni/: AndroidDirectory.cpp  AndroidDirectory.h  AndroidUtils.cpp  AndroidUtils.h  JavaUtils.cpp  JavaUtils.h  Notification.cpp  jni.pri
android/src/org/KangLinStudio/: MessageNotification.java  Utils.java
android_test/: AndroidUtils.pro  MainWindow.cpp  MainWindow.h  MainWindow.ui
ci/: build-install-tools-windows.sh  build-install-tools.sh  build.sh  qt-installer.sh
daemon/: MainWindow.cpp  MainWindow.h  MainWindow.ui  QtAndroidUtils.pro  Resources.qrc  daemon.pro
